--- a/app/src/main/res/drawable/background_drawable.xml
+++ b/app/src/main/res/drawable/background_drawable.xml
@@ -1,3 +1,3 @@
 <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/background_main"
+    android:src="@drawable/backround_main"
     android:gravity="fill" />
