--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,98 +2,90 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_drawable">
 
     <!-- Toolbar for App Name -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:background="#FF1493"
+    android:elevation="4dp"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SMART"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:layout_gravity="center" />
-    </androidx.appcompat.widget.Toolbar>
-
-    <!-- TabLayout for Navigation -->
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="0dp"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:tabIndicatorColor="@android:color/white"
-        app:tabSelectedTextColor="@android:color/white"
-        app:tabTextColor="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:text="SMART"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_gravity="center" />
+</androidx.appcompat.widget.Toolbar>
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your Activity"/>
+<com.google.android.material.tabs.TabLayout
+android:id="@+id/tabLayout"
+android:layout_width="0dp"
+android:layout_height="wrap_content"
+android:background="#FF1493" 
+    app:tabIndicatorColor="@android:color/white"
+    app:tabSelectedTextColor="@android:color/white"
+    app:tabTextColor="@android:color/darker_gray"
+    app:tabIndicatorHeight="4dp"
+    app:layout_constraintTop_toBottomOf="@id/toolbar"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent">
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Restrictions"/>
+    <!-- Tabs -->
+<com.google.android.material.tabs.TabItem
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:text="Your Activity" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Log Your Mood"/>
+<com.google.android.material.tabs.TabItem
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:text="Restrictions" />
+
+<com.google.android.material.tabs.TabItem
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:text="Log Your Mood" />
     </com.google.android.material.tabs.TabLayout>
 
-    <!-- Time Period Spinner -->
-    <Spinner
-        android:id="@+id/timePeriodSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:entries="@array/time_periods"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp" />
-
-    <!-- Date Picker Icon -->
-    <ImageButton
-        android:id="@+id/datePickerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_my_calendar"
-        android:contentDescription="Pick Date"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
-        app:layout_constraintStart_toEndOf="@id/timePeriodSpinner"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"/>
+    <!-- Spinner for time period selection -->
+<Spinner
+android:id="@+id/timePeriodSpinner"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_marginStart="16dp"
+android:layout_marginTop="16dp"
+android:entries="@array/time_periods"
+app:layout_constraintTop_toBottomOf="@id/tabLayout"
+app:layout_constraintStart_toStartOf="parent" />
 
     <!-- Pie Chart -->
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/pieChart"
-        android:layout_width="0dp"
-        android:layout_height="250dp"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/timePeriodSpinner"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+<com.github.mikephil.charting.charts.PieChart
+android:id="@+id/pieChart"
+android:layout_width="0dp"
+android:layout_height="250dp"
+android:layout_margin="16dp"
+app:layout_constraintTop_toBottomOf="@id/timePeriodSpinner"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- RecyclerView for App Usage List -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/usageRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/pieChart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+<androidx.recyclerview.widget.RecyclerView
+android:id="@+id/usageRecyclerView"
+android:layout_width="0dp"
+android:layout_height="0dp"
+android:layout_marginTop="8dp"
+app:layout_constraintTop_toBottomOf="@id/pieChart"
+app:layout_constraintBottom_toBottomOf="parent"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
